# 3d_engine

./: .gitignore  README.md  main.py
3d_files/checkerboard_obj/: checkerboard.mtl
cpp-3d-engine/: CMakeLists.txt  Camera.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Plane.hpp  Scene.hpp  Texture.hpp  Triangle.hpp  main.cpp  run.sh
python/: main.py
